# a2a-hackathon

./: pyproject.toml
.github/workflows/: harness.yml
src/a2a_hack/: a2a_errors.py  bridge.py  cli.py  domain.py  merge.py  model_usage.py  runner.py
src/a2a_hack/env_api/: server.py  sessions.py
tests/: test_a2a_failures.py  test_batch_and_scoring.py  test_events.py  test_golden_replay.py  test_m1_contextid.py  test_model_usage.py
